--- a/index.html
+++ b/index.html
@@ -437,15 +437,15 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-7 col-md-8">
                         <div class="big">
-                            Puedes ahorrar<br>
-                            <span class="big bold blue"><span class="big">13.730,62 €</span></span><br>
-                            ahorro 100,00 € mensual durante 10 años
+                            <span class="d-block">Puedes ahorrar</span>
+                            <span class="big font-weight-bold display-4 d-block text-primary">13.730,62 €</span>
+                            <br>
+                           <span> ahorro 100,00 € mensual durante 10 años</span>
                         </div>
                         <div class="divider v-offset-4"></div>
                         <div class="row v-offset-3">
                             <div class="col-xs-8 col-lg-5">
-                                <span class="color-swatch initial-balance"></span><span class="swatch-aligned">Balance
-                                    Inicial:</span>
+                                <span class="color-swatch initial-balance"></span><span class="swatch-aligned">Balance Inicial:</span>
                             </div>
                             <div class="col-xs-4 col-lg-7">
                                 1.000,00 €
@@ -453,8 +453,7 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-8 col-lg-5">
-                                <span class="color-swatch periodic-deposits"></span><span
-                                    class="swatch-aligned">Depósito Periódicos:</span>
+                                <span class="color-swatch periodic-deposits"></span><span class="swatch-aligned">Depósito Periódicos:</span>
                             </div>
                             <div class="col-xs-4 col-lg-7">
                                 12.000,00 €
@@ -462,14 +461,14 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-8 col-lg-5">
-                                <span class="color-swatch interest"></span><span class="swatch-aligned">Interés
-                                    total:</span>
+                                <span class="color-swatch interest"></span><span class="swatch-aligned">Interés total:</span>
                             </div>
                             <div class="col-xs-4 col-lg-7">
                                 730,62 €
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col-xs-12 col-sm-5 col-md-4">
                         <div class="small-pie-chart-container">
                             <canvas id="value-split-chart"></canvas>
@@ -497,41 +496,95 @@
                     </table>
                 </div>
                 <script nonce="12VbAnSVtDU/IxFFXg8D9A==">
-
                     //<![CDATA[
 
 
                     jQuery(function () {
-                        var amortizationData = [
-                            // Your amortization data here
-                            { "year": 1, "periodic_deposits": 1200.00, "total_deposits": 2200.00, "total_interest": 16.57, "balance": 2216.57 },
-                            { "year": 2, "periodic_deposits": 1200.00, "total_deposits": 3400.00, "total_interest": 45.35, "balance": 3445.35 },
-                            { "year": 3, "periodic_deposits": 1200.00, "total_deposits": 4600.00, "total_interest": 86.49, "balance": 4686.49 },
-                            { "year": 4, "periodic_deposits": 1200.00, "total_deposits": 5800.00, "total_interest": 140.09, "balance": 5940.09 },
-                            { "year": 5, "periodic_deposits": 1200.00, "total_deposits": 7000.00, "total_interest": 206.28, "balance": 7206.28 },
-                            { "year": 6, "periodic_deposits": 1200.00, "total_deposits": 8200.00, "total_interest": 285.19, "balance": 8485.19 },
-                            { "year": 7, "periodic_deposits": 1200.00, "total_deposits": 9400.00, "total_interest": 376.95, "balance": 9776.95 },
-                            { "year": 8, "periodic_deposits": 1200.00, "total_deposits": 10600.00, "total_interest": 481.69, "balance": 11081.69 },
-                            { "year": 9, "periodic_deposits": 1200.00, "total_deposits": 11800.00, "total_interest": 599.54, "balance": 12399.54 },
-                            { "year": 10, "periodic_deposits": 1200.00, "total_deposits": 13000.00, "total_interest": 730.62, "balance": 13730.62 }
-                        ];
+                        $('#fv-initial-balance').val('1000.00');
+                        $('#nper-initial-balance').val('1000.00');
+                        $('#pmt-initial-balance').val('1000.00');
+                        $('#rate-initial-balance').val('1000.00');
 
-                        var tbody = $('#amortization-table tbody');
+                        $('#fv-deposit-frequency').val('12');
+                        $('#nper-deposit-frequency').val('12');
+                        $('#pmt-deposit-frequency').val('12');
+                        $('#rate-deposit-frequency').val('12');
 
-                        // Clear existing rows
-                        tbody.empty();
+                        $('#fv-deposit-timing').val('1');
+                        $('#nper-deposit-timing').val('1');
+                        $('#pmt-deposit-timing').val('1');
+                        $('#rate-deposit-timing').val('1');
 
-                        // Populate table with data
-                        $.each(amortizationData, function (index, row) {
-                            var tr = $('<tr>');
-                            $.each(row, function (key, value) {
-                                var td = $('<td>').text(value);
-                                tr.append(td);
-                            });
-                            tbody.append(tr);
-                        });
+
+                        if (!$('#solve-rate-fields').is(':visible')) {
+                            $('#fv-interest-rate').val('1.000');
+                            $('#nper-interest-rate').val('1.000');
+                            $('#pmt-interest-rate').val('1.000');
+                        }
+
+                        if (!$('#solve-pmt-fields').is(':visible')) {
+                            $('#fv-periodic-deposit').val('100.00');
+                            $('#nper-periodic-deposit').val('100.00');
+                            $('#rate-periodic-deposit').val('100.00');
+                        }
+
+                        if (!$('#solve-nper-fields').is(':visible')) {
+                            $('#fv-term').val('10');
+                            $('#pmt-term').val('10');
+                            $('#rate-term').val('10');
+                        }
+
+                        if (!$('#solve-fv-fields').is(':visible')) {
+                            $('#nper-goal').val('10000.00');
+                            $('#pmt-goal').val('10000.00');
+                            $('#rate-goal').val('10000.00');
+                        }
+
+                        if ($('#value-split-chart').is(':visible')) {
+                            var pc_initial_balance_color = typeof window.pie_chart_initial_balance_color !== 'undefined' ? window.pie_chart_initial_balance_color : '#428bca';
+                            var pc_periodic_deposits_color = typeof window.pie_chart_periodic_deposits_color !== 'undefined' ? window.pie_chart_periodic_deposits_color : '#9ECAE1';
+                            var pc_interest_color = typeof window.pie_chart_interest_color !== 'undefined' ? window.pie_chart_interest_color : '#979797';
+                            var data = {
+                                datasets: [{
+                                    data: [
+                                        1000.0,
+                                        12000.0,
+                                        730.62
+                                    ],
+                                    backgroundColor: [
+                                        pc_initial_balance_color,
+                                        pc_periodic_deposits_color,
+                                        pc_interest_color
+                                    ]
+                                }],
+                                labels: [
+                                    'Balance Inicial',
+                                    'Depósito Periódicos',
+                                    'Interés'
+                                ]
+                            };
+                            draw_pie_chart(data);
+                        }
+
+                        var amortizationData = [{ "year": 1, "initial_balance": 1000.0, "periodic_deposits": 1200.0, "total_deposits": 2200.0, "total_interest": 16.57, "balance": 2216.57 }, { "year": 2, "initial_balance": 1000.0, "periodic_deposits": 1200.0, "total_deposits": 3400.0, "total_interest": 45.35, "balance": 3445.35 }, { "year": 3, "initial_balance": 1000.0, "periodic_deposits": 1200.0, "total_deposits": 4600.0, "total_interest": 86.49, "balance": 4686.49 }, { "year": 4, "initial_balance": 1000.0, "periodic_deposits": 1200.0, "total_deposits": 5800.0, "total_interest": 140.09, "balance": 5940.09 }, { "year": 5, "initial_balance": 1000.0, "periodic_deposits": 1200.0, "total_deposits": 7000.0, "total_interest": 206.28, "balance": 7206.28 }, { "year": 6, "initial_balance": 1000.0, "periodic_deposits": 1200.0, "total_deposits": 8200.0, "total_interest": 285.19, "balance": 8485.19 }, { "year": 7, "initial_balance": 1000.0, "periodic_deposits": 1200.0, "total_deposits": 9400.0, "total_interest": 376.95, "balance": 9776.95 }, { "year": 8, "initial_balance": 1000.0, "periodic_deposits": 1200.0, "total_deposits": 10600.0, "total_interest": 481.69, "balance": 11081.69 }, { "year": 9, "initial_balance": 1000.0, "periodic_deposits": 1200.0, "total_deposits": 11800.0, "total_interest": 599.54, "balance": 12399.54 }, { "year": 10, "initial_balance": 1000.0, "periodic_deposits": 1200.0, "total_deposits": 13000.0, "total_interest": 730.62, "balance": 13730.62 }];
+
+                        if ($('#growth-chart').is(':visible')) {
+                            draw_bar_chart(amortizationData);
+
+                            draw_amortization_table('amortization',
+                                [
+                                    { 'title': 'Año', 'data_key': 'year' },
+                                    { 'title': 'Depósito Periódicos', 'data_key': 'periodic_deposits', 'format': 1 },
+                                    { 'title': 'Depósitos totales', 'data_key': 'total_deposits', 'format': 1 },
+                                    { 'title': 'Interés total', 'data_key': 'total_interest', 'format': 1 },
+                                    { 'title': 'Balance', 'data_key': 'balance', 'format': 1 }
+                                ],
+                                amortizationData,
+                                {});
+
+                        }
+
                     });
-
 
                     //]]>
                 </script>
@@ -615,6 +668,11 @@
             var interestRate = parseFloat(document.getElementById('fv-interest-rate').value) / 100; // Convert percentage to decimal
             var term = parseFloat(document.getElementById('fv-term').value);
 
+            var years = [];
+            var deposits = [];
+            var interests = [];
+            var balances = [];
+
             // Perform calculations
             var totalSavings = initialBalance;
             var totalPeriods = term * depositFrequency;
@@ -629,9 +687,13 @@
                     totalSavings += periodicDeposit;
                 }
             }
+            years.push(i + 1);
+            deposits.push(periodicDeposit);
+            interests.push((totalSavings - initialBalance - (periodicDeposit * depositFrequency * term)));
+            balances.push(totalSavings);
 
             // Display results
-            document.querySelector('.big').innerHTML = 'Puedes ahorrar<br><span class="big bold blue"><span class="big">' + totalSavings.toFixed(2) + ' €</span></span><br>ahorro ' + periodicDeposit.toFixed(2) + ' € mensual durante ' + term + ' años';
+            document.querySelector('.big').innerHTML = 'Puedes ahorrar<br><span class="big font-weight-bold display-4 d-block text-primary""><span class="big">' + totalSavings.toFixed(2) + ' €</span></span><br>ahorro ' + periodicDeposit.toFixed(2) + ' € mensual durante ' + term + ' años';
             document.querySelector('.col-xs-4.col-lg-7:nth-of-type(1)').textContent = initialBalance.toFixed(2) + ' €';
             document.querySelector('.col-xs-4.col-lg-7:nth-of-type(2)').textContent = (periodicDeposit * depositFrequency * term).toFixed(2) + ' €';
             document.querySelector('.col-xs-4.col-lg-7:nth-of-type(3)').textContent = (totalSavings - initialBalance - (periodicDeposit * depositFrequency * term)).toFixed(2) + ' €';
@@ -659,8 +721,8 @@
             }
 
             // Display results or update UI
-            document.querySelector('.big').innerHTML = 'Puedes ahorrar<br><span class="big bold blue"><span class="big">' + goal.toFixed(2) + ' €</span></span><br>ahorrando ' + periodicDeposit.toFixed(2) + ' € mensualmente';
-            document.querySelector('.col-xs-4.col-lg-7').textContent = timeToGoal + ' meses';
+            document.querySelector('.big').innerHTML = 'Puedes ahorrar<br><span class="big font-weight-bold display-4 d-block text-primary"><span class="big">' + goal.toFixed(2) + ' €</span></span><br>ahorrando ' + periodicDeposit.toFixed(2) + ' € mensualmente';
+          
         }
 
 
@@ -680,7 +742,7 @@
             periodicDeposit = Math.ceil(periodicDeposit * 100) / 100; // Round to two decimal places
 
             // Display results or update UI
-            document.querySelector('.big').innerHTML = 'Para alcanzar tu objetivo de ahorro de <br><span class="big bold blue"><span class="big">' + goal.toFixed(2) + ' €</span></span><br>necesitarás ahorrar ' + periodicDeposit.toFixed(2) + ' € mensualmente durante ' + term + ' años.';
+            document.querySelector('.big').innerHTML = 'Para alcanzar tu objetivo de ahorro de <br><span class="big font-weight-bold display-4 d-block text-primary"><span class="big">' + goal.toFixed(2) + ' €</span></span><br>necesitarás ahorrar ' + periodicDeposit.toFixed(2) + ' € mensualmente durante ' + term + ' años.';
         }
 
 
@@ -716,7 +778,7 @@
             }
 
             // Display results or update UI
-            document.querySelector('.big').innerHTML = 'Para alcanzar tu objetivo de ahorro de <br><span class="big bold blue"><span class="big">' + goal.toFixed(2) + ' €</span></span><br>necesitarás un interés anual del ' + (interestRate * 100).toFixed(2) + '% durante ' + term + ' años.';
+            document.querySelector('.big').innerHTML = 'Para alcanzar tu objetivo de ahorro de <br><span class="big font-weight-bold display-4 d-block text-primary"><span class="big">' + goal.toFixed(2) + ' €</span></span><br>necesitarás un interés anual del ' + (interestRate * 100).toFixed(2) + '% durante ' + term + ' años.';
         }
 
 
